# ivy

./: .gitignore  .readthedocs.yaml  COPYING  Makefile  README.md  example.svi  ivy.py  pyproject.toml  sv-extension.md
docs/source/: conf.py  config.rst  extensions.rst  index.rst  license.rst  quickstart.rst  usage.rst
docs/source/_static/: custom.css
docs/source/quickstart/: trace_b.json  trace_c.json
examples/: loop.ivy  single.ivy  use_invariant.ivy
examples/split_fifo/: .gitignore  README.md  split_fifo.ivy  split_fifo.sby  split_fifo.sv  split_fifo_invariants.svi
examples/split_fifo/quickstart/: split_fifo_a.ivy  split_fifo_b.ivy  split_fifo_c.ivy  split_fifo_d.ivy  split_fifo_invariants_a.svi  split_fifo_invariants_b.svi  split_fifo_invariants_c.svi  split_fifo_invariants_d.svi
src/yosys_ivy/: __init__.py  config.py  data.py  design.py  main.py  sccs.py  status_db.py
src/yosys_ivy/solver/: __init__.py  dummy.py  sby.py
tests/: test_ivy.py
tests/ivy/: data_model.ivy  dependencies.ivy  existing_workdir.ivy  explicit_setup.ivy  future_ff.ivy  parameters.ivy  source_files.ivy  source_files.svi  trivial.ivy
tests/ivy/examples/: split_fifo.ivyex
